# SwiftSearch

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
cmake/: CompilerWarnings.cmake  PlatformConfig.cmake
docs/screenshots/: README.md
resources/: resources.qrc
resources/translations/: swiftsearch_zh_CN.qm  swiftsearch_zh_CN.ts
scripts/: build_linux_release.sh  build_windows_release.ps1  deploy_windows_dlls.sh  package_windows.sh
src/: CMakeLists.txt
src/controller/: command_history.cpp  command_history.h  file_command.cpp  file_command.h  query_parser.cpp  query_parser.h  result_ranker.cpp  result_ranker.h  search_filter.h  search_observer.h  search_service.cpp  search_service.h  search_types.h
src/model/: file_entry.h  file_scanner.cpp  file_scanner.h  index_database.cpp  index_database.h  index_engine.cpp  index_engine.h  indexing_observer.h  platform_handles.h
src/util/: log_manager.cpp  log_manager.h  sort_util.h
src/view/: main_window.cpp  main_window.h  result_list_widget.cpp  result_list_widget.h  search_bar_widget.cpp  search_bar_widget.h  settings_dialog.cpp  settings_dialog.h
tests/: CMakeLists.txt  test_command_pattern.cpp  test_index_engine.cpp  test_logging.cpp  test_main.cpp  test_observer_pattern.cpp  test_platform_scanner.cpp  test_search_service.cpp  test_timsort.cpp
